postgres-user-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-user
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres-user
  template:
    metadata:
      labels:
        app: postgres-user
    spec:
      containers:
        - name: postgres-user
          image: postgres:12.10-alpine
          imagePullPolicy: "IfNotPresent"
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /var/lib/postgresql/user-data
              name: postgres-user-data
      volumes:
        - name: postgres-user-data
          persistentVolumeClaim:
            claimName: postgres-user-pvc
      imagePullSecrets:
        - name: dockerconfigjson-github-com
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-user
  labels:
    app: postgres-user
spec:
  ports:
    - port: 5433
      targetPort: 5432
  selector:
    app: postgres-user
  # NOTE: Remove this when deployed
  type: LoadBalancer
