zookeeper-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: zookeeper
  labels:
    # tier: backend
    app: zookeeper
spec:
  # clusterIP: None
  type: LoadBalancer
  ports:
  - name: client
    port: 2181
    protocol: TCP
  - name: follower
    port: 2888
    protocol: TCP
  - name: leader
    port: 3888
    protocol: TCP
  selector:
    app: zookeeper
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: zookeeper
  labels:
    app: zookeeper
spec:
  serviceName: zookeeper
  replicas: 1
  selector: 
    matchLabels:
      app: zookeeper
  template:
    metadata:
      labels:
        app: zookeeper
    spec:
      containers:
      - name: zookeeper
        image: digitalwonderland/zookeeper
        ports:
        - containerPort: 2181
        volumeMounts:
        - name: zookeeper-pv
          mountPath: /vol/zk/data/zoo1
      volumes:
      - name: zookeeper-pv
        persistentVolumeClaim:
          claimName: zookeeper-pvc
