ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: as-ingress
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kafka-headless
            port:
              number: 9092
      - path: /seating
        pathType: Prefix
        backend:
          service:
            name: as-seating-svc
            port:
              number: 9004
